objects/Discount_Approval_Category__c.object
<CustomObject>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Approval_Strategy__c</fullName>
        <label>Approval Strategy</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>ALL</fullName>
                </value>
                <value>
                    <fullName>ANY</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Escalation_Level_1_Approver__c</fullName>
        <label>Escalation Level 1 Approver</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Escalation_Level_1_DOA__c</fullName>
        <label>Escalation Level 1 DOA</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>CRO__c</fullName>
                    <label>CRO</label>
                </value>
                <value>
                    <fullName>MD__c</fullName>
                    <label>MD</label>
                </value>
                <value>
                    <fullName>FBP_Director__c</fullName>
                    <label>FBP Director</label>
                </value>
                <value>
                    <fullName>FBP_Team__c</fullName>
                    <label>FBP Team</label>
                </value>
                <value>
                    <fullName>Commercial_Director__c</fullName>
                    <label>Commercial Director</label>
                </value>
                <value>
                    <fullName>Commercial_Leader_Primary__c</fullName>
                    <label>Commercial Leader Primary</label>
                </value>
                <value>
                    <fullName>Commercial_Leader_Secondary__c</fullName>
                    <label>Commercial Leader Secondary</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Escalation_Level_2_Approver__c</fullName>
        <label>Escalation Level 2 Approver</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Escalation_Level_2_DOA__c</fullName>
        <label>Escalation Level 2 DOA</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>CRO__c</fullName>
                    <label>CRO</label>
                </value>
                <value>
                    <fullName>MD__c</fullName>
                    <label>MD</label>
                </value>
                <value>
                    <fullName>FBP_Director__c</fullName>
                    <label>FBP Director</label>
                </value>
                <value>
                    <fullName>FBP_Team__c</fullName>
                    <label>FBP Team</label>
                </value>
                <value>
                    <fullName>Commercial_Director__c</fullName>
                    <label>Commercial Director</label>
                </value>
                <value>
                    <fullName>Commercial_Leader_Primary__c</fullName>
                    <label>Commercial Leader Primary</label>
                </value>
                <value>
                    <fullName>Commercial_Leader_Secondary__c</fullName>
                    <label>Commercial Leader Secondary</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Is_Approval_Applicable__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Approval Applicable?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Maximum_ACV__c</fullName>
        <label>Maximum ACV</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Maximum_Discount__c</fullName>
        <label>Maximum Discount %</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Minimum_ACV__c</fullName>
        <label>Minimum ACV</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Minimum_Discount__c</fullName>
        <label>Minimum Discount %</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Original_Approver_DOA__c</fullName>
        <label>Original Approver DOA</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Commercial_Director__c</fullName>
                    <label>Commercial Director</label>
                </value>
                <value>
                    <fullName>FBP_Team__c</fullName>
                    <label>FBP Team</label>
                </value>
                <value>
                    <fullName>FBP_Director__c</fullName>
                    <label>FBP Director</label>
                </value>
                <value>
                    <fullName>MD__c</fullName>
                    <label>MD</label>
                </value>
                <value>
                    <fullName>CRO__c</fullName>
                    <label>CRO</label>
                </value>
                <value>
                    <fullName>Commercial_Leader_Primary__c</fullName>
                    <label>Commercial Leader Primary</label>
                </value>
                <value>
                    <fullName>Commercial_Leader_Secondary__c</fullName>
                    <label>Commercial Leader Secondary</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Original_Approver__c</fullName>
        <label>Original Approver</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <label>Region</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Europe</fullName>
                </value>
                <value>
                    <fullName>ANZ</fullName>
                </value>
                <value>
                    <fullName>AMS</fullName>
                </value>
                <value>
                    <fullName>India</fullName>
                </value>
                <value>
                    <fullName>Asia</fullName>
                </value>
                <value>
                    <fullName>Middle East</fullName>
                </value>
                <value>
                    <fullName>China</fullName>
                </value>
                <value>
                    <fullName>GBL</fullName>
                </value>
                <value>
                    <fullName>Hong Kong</fullName>
                </value>
                <value>
                    <fullName>Indonesia</fullName>
                </value>
                <value>
                    <fullName>SEA</fullName>
                </value>
                <value>
                    <fullName>ESA</fullName>
                    <isActive>false</isActive>
                    <label>ESA</label>
                </value>
                <value>
                    <fullName>ME</fullName>
                    <isActive>false</isActive>
                    <label>ME</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Product</fullName>
                </value>
                <value>
                    <fullName>Services</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Discount Approval Category</label>
    <listViews>
        <fullName>AMS_Discount</fullName>
        <columns>NAME</columns>
        <columns>Region__c</columns>
        <columns>Type__c</columns>
        <columns>Maximum_ACV__c</columns>
        <columns>Minimum_ACV__c</columns>
        <columns>Maximum_Discount__c</columns>
        <columns>Minimum_Discount__c</columns>
        <columns>Original_Approver_DOA__c</columns>
        <columns>Escalation_Level_1_DOA__c</columns>
        <columns>Escalation_Level_2_DOA__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Active__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>Region__c</field>
            <operation>equals</operation>
            <value>AMS</value>
        </filters>
        <label>AMS Discount</label>
    </listViews>
    <listViews>
        <fullName>ANZ_Discount</fullName>
        <columns>NAME</columns>
        <columns>Region__c</columns>
        <columns>Type__c</columns>
        <columns>Maximum_ACV__c</columns>
        <columns>Minimum_ACV__c</columns>
        <columns>Maximum_Discount__c</columns>
        <columns>Minimum_Discount__c</columns>
        <columns>Original_Approver_DOA__c</columns>
        <columns>Escalation_Level_1_DOA__c</columns>
        <columns>Escalation_Level_2_DOA__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Active__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>Region__c</field>
            <operation>equals</operation>
            <value>ANZ</value>
        </filters>
        <label>ANZ Discount</label>
    </listViews>
    <listViews>
        <fullName>All</fullName>
        <columns>Type__c</columns>
        <columns>Region__c</columns>
        <columns>Minimum_ACV__c</columns>
        <columns>Maximum_ACV__c</columns>
        <columns>Minimum_Discount__c</columns>
        <columns>Maximum_Discount__c</columns>
        <columns>Original_Approver_DOA__c</columns>
        <columns>Escalation_Level_1_DOA__c</columns>
        <columns>Escalation_Level_2_DOA__c</columns>
        <columns>Active__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Active__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>Region__c</field>
            <operation>equals</operation>
            <value>Europe</value>
        </filters>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>China_Discount</fullName>
        <columns>NAME</columns>
        <columns>Region__c</columns>
        <columns>Type__c</columns>
        <columns>Maximum_ACV__c</columns>
        <columns>Minimum_ACV__c</columns>
        <columns>Maximum_Discount__c</columns>
        <columns>Minimum_Discount__c</columns>
        <columns>Original_Approver_DOA__c</columns>
        <columns>Escalation_Level_1_DOA__c</columns>
        <columns>Escalation_Level_2_DOA__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Active__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>Region__c</field>
            <operation>equals</operation>
            <value>China</value>
        </filters>
        <label>China Discount</label>
    </listViews>
    <listViews>
        <fullName>EU_Discount</fullName>
        <columns>NAME</columns>
        <columns>Region__c</columns>
        <columns>Type__c</columns>
        <columns>Maximum_ACV__c</columns>
        <columns>Minimum_ACV__c</columns>
        <columns>Maximum_Discount__c</columns>
        <columns>Minimum_Discount__c</columns>
        <columns>Original_Approver_DOA__c</columns>
        <columns>Escalation_Level_1_DOA__c</columns>
        <columns>Escalation_Level_2_DOA__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Region__c</field>
            <operation>equals</operation>
            <value>Europe</value>
        </filters>
        <filters>
            <field>Active__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>EUROPE Discount</label>
    </listViews>
    <listViews>
        <fullName>GBL_Discount</fullName>
        <columns>NAME</columns>
        <columns>Region__c</columns>
        <columns>Type__c</columns>
        <columns>Maximum_ACV__c</columns>
        <columns>Minimum_ACV__c</columns>
        <columns>Maximum_Discount__c</columns>
        <columns>Minimum_Discount__c</columns>
        <columns>Original_Approver_DOA__c</columns>
        <columns>Escalation_Level_1_DOA__c</columns>
        <columns>Escalation_Level_2_DOA__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Active__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>Region__c</field>
            <operation>equals</operation>
            <value>GBL</value>
        </filters>
        <label>GBL Discount</label>
    </listViews>
    <listViews>
        <fullName>Hong_Kong_Discount</fullName>
        <columns>NAME</columns>
        <columns>Region__c</columns>
        <columns>Type__c</columns>
        <columns>Maximum_ACV__c</columns>
        <columns>Minimum_ACV__c</columns>
        <columns>Maximum_Discount__c</columns>
        <columns>Minimum_Discount__c</columns>
        <columns>Original_Approver_DOA__c</columns>
        <columns>Escalation_Level_1_DOA__c</columns>
        <columns>Escalation_Level_2_DOA__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Active__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>Region__c</field>
            <operation>equals</operation>
            <value>Hong Kong</value>
        </filters>
        <label>Hong Kong Discount</label>
    </listViews>
    <listViews>
        <fullName>India_Discount</fullName>
        <columns>NAME</columns>
        <columns>Region__c</columns>
        <columns>Type__c</columns>
        <columns>Maximum_ACV__c</columns>
        <columns>Minimum_ACV__c</columns>
        <columns>Maximum_Discount__c</columns>
        <columns>Minimum_Discount__c</columns>
        <columns>Original_Approver_DOA__c</columns>
        <columns>Escalation_Level_1_DOA__c</columns>
        <columns>Escalation_Level_2_DOA__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Active__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>Region__c</field>
            <operation>equals</operation>
            <value>India</value>
        </filters>
        <label>India Discount</label>
    </listViews>
    <listViews>
        <fullName>India_Discount_Categories</fullName>
        <columns>NAME</columns>
        <columns>Type__c</columns>
        <columns>Minimum_Discount__c</columns>
        <columns>Maximum_Discount__c</columns>
        <columns>Minimum_ACV__c</columns>
        <columns>Maximum_ACV__c</columns>
        <columns>Original_Approver__c</columns>
        <columns>Escalation_Level_1_Approver__c</columns>
        <columns>Escalation_Level_2_Approver__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Region__c</field>
            <operation>equals</operation>
            <value>India</value>
        </filters>
        <label>India Discount Categories</label>
    </listViews>
    <listViews>
        <fullName>Indonesia_Discount</fullName>
        <columns>NAME</columns>
        <columns>Region__c</columns>
        <columns>Type__c</columns>
        <columns>Maximum_ACV__c</columns>
        <columns>Minimum_ACV__c</columns>
        <columns>Maximum_Discount__c</columns>
        <columns>Minimum_Discount__c</columns>
        <columns>Original_Approver_DOA__c</columns>
        <columns>Escalation_Level_1_DOA__c</columns>
        <columns>Escalation_Level_2_DOA__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Active__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>Region__c</field>
            <operation>equals</operation>
            <value>Indonesia</value>
        </filters>
        <label>Indonesia Discount</label>
    </listViews>
    <listViews>
        <fullName>Middle_East_Discount</fullName>
        <columns>NAME</columns>
        <columns>Region__c</columns>
        <columns>Type__c</columns>
        <columns>Maximum_ACV__c</columns>
        <columns>Minimum_ACV__c</columns>
        <columns>Maximum_Discount__c</columns>
        <columns>Minimum_Discount__c</columns>
        <columns>Original_Approver_DOA__c</columns>
        <columns>Escalation_Level_1_DOA__c</columns>
        <columns>Escalation_Level_2_DOA__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Active__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>Region__c</field>
            <operation>equals</operation>
            <value>Middle East</value>
        </filters>
        <label>Middle East Discount</label>
    </listViews>
    <listViews>
        <fullName>SEA_Discount</fullName>
        <columns>NAME</columns>
        <columns>Region__c</columns>
        <columns>Type__c</columns>
        <columns>Maximum_ACV__c</columns>
        <columns>Minimum_ACV__c</columns>
        <columns>Maximum_Discount__c</columns>
        <columns>Minimum_Discount__c</columns>
        <columns>Original_Approver_DOA__c</columns>
        <columns>Escalation_Level_1_DOA__c</columns>
        <columns>Escalation_Level_2_DOA__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Active__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>Region__c</field>
            <operation>equals</operation>
            <value>SEA</value>
        </filters>
        <label>SEA Discount</label>
    </listViews>
    <nameField>
        <label>Discount Approval Category Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Discount Approval Categories</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>